<resources>
    <string name="app_name">Rent It</string>
    <string name="greetings_label">Welcome back</string>
    <string name="enter_data_instruction_label">Enter your email or number</string>
    <string name="enter_password_instruction_label">Enter your password</string>
    <string name="password_label">Password</string>
    <string name="enter_data_label">Email or mobile number</string>
    <string name="hint_email_label">example@example.com</string>
    <string name="next_step_label">Next step</string>
    <string name="register_label">Register</string>
    <string name="or_label">or</string>
    <string name="create_account_label">Create an account</string>
    <string name="login_label">Login</string>
    <string name="email_label">Email</string>
    <string name="forgot_password_label">Forgot password</string>
    <string name="create_account_instrucctions_label">Fill these form and jump to next step</string>
    <string name="password_length_error_label">The password must be at least 6 characters long</string>
    <string name="alphanumeric">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="invalid_password_label">Password invalid</string>
    <string name="example_preview_label">itzaeg@gmail.com</string>
    <string name="content_description_search_bar">Search bar of locations</string>
    <string name="content_description_icon_filter">Icon filter</string>
    <string name="content_description_image_location">Image location</string>
    <string name="search_city_label">Search via City</string>
    <string name="footer_label">Others offers</string>
    <string name="favorites_title_label">Favorites apartments</string>
</resources>